...
  "backendPushTransferTitle": "Received {{amount}} {{token}}",
  "backupCreateRecoveryAgreement": "The secret phrase is my private key, and I will not share it with anyone.",
  "backupCreateRecoveryPhrase": "Your recovery phrase",
  "backupCreateRecoverySaveWords": "Write down or copy these words in the right order and save them somewhere safe.",
  "backupCreateRecoveryWarningMessage": "If you lose your recovery phrase, you will lose access to your funds, and no one can help recover it.",
...
  "custom": "Custom",
  "customNetwork": "Custom network",
  "customProviderEmail": "Enter email",
  "customProviderEmailCancel": "Cancel",
  "customProviderEmailPlaceholder": "some name@haqq",
...
  "homeNewsTitle": "News",
  "homeNewsViewAll": "View all",
  "homeSettings": "Settings",
  "homeSettingsAbout": "About",
  "homeSettingsAccounts": "Manage accounts",
  "homeSettingsAddressBook": "Address book",
  "homeSettingsAppearance": "Appearance",
...
  "homeStakingUnbounded": "Unbounded",
  "homeWallet": "Main",
  "homeWalletTitle": "Your wallets",
  "infoTransactionNetwork": "Network",
  "invalidQrCodeSign": "Invalid QR code. Please check your hardware and retry.",
...
  "keystoneWalletSyncPathError": "Keystone supports syncing only the first 10 addresses from the Ledger Live derivation path",
  "later": "Later",
  "ledgerAccountsAdd": "Add",
  "ledgerAccountsAdded": "Added",
  "ledgerAccountsConfirm": "Confirm pairing on your Ledger device",
...
  "ledgerBluetoothTitleDisabled": "Bluetooth access is disabled.",
  "ledgerBluetoothTitleUnknown": "Enable Bluetooth",
  "ledgerChooseAccount": "Choose account",
  "ledgerConnect": "Connect ledger",
  "ledgerFinishCongratulations": "Сongratulations!You have successfully added a new account",
...
  "lockedTokensVestedAvailableIn": " (Will be available in: {{value}})",
  "low": "Low",
  "mainAccount": "Main account",
  "markupAdAmbasadorTitle": "Ambassador Program",
  "markupAdAmbassadorDescription": "Together, we're building the largest online community promoting Islamic values in crypto.",
...
  "removeSSSSecondary": "Keep social login",
  "removeSSSTitle": "Do you want to delete your social login?",
  "reset": "Reset",
  "restoreAgreementAgree": "Agree",
  "restoreAgreementText": "The recovery phrase is a 12-word phrase you received when creating your account. The private key is a key you generated in the app.",
...
  "settingsAccountDetailSocial": "Social",
  "settingsAccountDetailViewRecoveryPhraseSubtitle": "Change account picture",
  "settingsAccountDetailViewRecoveryPhraseTitle": "View Recovery phrase",
  "settingsAccountDetailsHideAccount": "Hide account",
  "settingsAccountEditHeaderTitle": "Edit account name",
...
  "settingsSecurityPinNotMatched": "Pin not matched",
  "settingsSecurityPinRepeat": "Please re-enter PIN code",
  "settingsSecurityPinSet": "Set 6-digital pin code",
  "settingsSecurityRewriteCloudBackup": "Immediately rewrite cloud backup",
  "settingsSecurityRewriteCloudBackupDescription": "Re-create backup in your cloud storage",
...
