...
import {ErrorText, PopupContainer, Spacer, Text} from '@app/components/ui';
import {createTheme, verticalScale} from '@app/helpers';
import {I18N} from '@app/i18n';

interface OnboardingSetupPinProps {
  onKeyboard: (value: number) => void;
  pin: string;
  errorText?: string;
}

export const OnboardingSetupPin = ({
  onKeyboard,
  pin,
...
  return (
    <PopupContainer style={page.container} testID="onboarding_setup_pin">
      <Text
        t4
        i18n={I18N.onboardingSetupPinSet}
        style={page.title}
        testID="onboarding_setup_pin_set"
      />
      <Text
        t11
        color={Color.textBase2}
        center
        i18n={I18N.onboardingSetupPinProjectWallet}
...
