...
        <View style={styles.modalView}>
          <Text t5 i18n={I18N.customProviderEmail} center />
          <Spacer height={8} />
          <Input
            value={email}
            onChangeText={setEmail}
            testID={'custom_provider_email_input'}
          />
          <Spacer height={28} />
          <Button
            i18n={I18N.customProviderEmailSubmit}
            onPress={() => {
              onChange(email);
              onClosePopup(onClose);
            }}
            variant={ButtonVariant.contained}
            size={ButtonSize.middle}
            style={styles.button}
            testID={'custom_provider_email_submit'}
          />
          <Spacer height={16} />
          <Button
            i18n={I18N.customProviderEmailCancel}
            onPress={() => onClosePopup(onClose)}
            variant={ButtonVariant.third}
...
