...
      <Button
        error
        variant={ButtonVariant.second}
        i18n={I18N.restorePasswordResetWallet}
        onPress={onClickReset}
        style={page.button}
        testID="reset_wallet"
      />
    </BottomSheet>
  );
};

const page = StyleSheet.create({
...
