...
            <Text
              variant={TextVariant.t15}
              position={TextPosition.center}
              color={Color.textBase2}
              i18n={I18N.modalPinForgotCode}
              style={page.additionButtonText}
              testID="forgot_the_code"
            />
          </TouchableOpacity>
        }
      />
      {showRestore && <RestorePassword onClose={() => setShowRestore(false)} />}
    </View>
...
