...
  }, [biometryType]);

  return (
    <PopupContainer style={style.container}>
      <Spacer style={style.space}>
        {icon}
        <Text t4 style={style.title} testID="onboarding_biometry_title">
          {enableBiometry}
        </Text>
        <Text
          t11
          color={Color.textBase2}
          i18n={I18N.onboardingBiometrySafeFast}
...
          onPress={onClickEnable}
        />
      )}
      <Button
        style={style.margin}
        i18n={I18N.onboardingBiometrySkip}
        testID="onboarding_biometry_skip"
        onPress={onClickSkip}
      />
    </PopupContainer>
  );
};

...
